<resources>
    <string name="app_name">Gamedex</string>
    <string name="admob_banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="na_not_available">N/A</string>
    <string name="summary_unavailable">Summary Unavailable</string>
    <string name="progress_message">Fetching Games…</string>
    <string name="genre_seperator">,\u0020</string>
    <string name="platform_separator">\u0020|\u0020</string>

    <string name="search_game_hint">Enter Game Name</string>

    <string name="placeholder_summary">This game is about staying alive and shooting them before they can shoot you.  Use a variety of household objects, improvised weapons, and guns.  You know, just go nuts.</string>
    <string name="placeholder_platform">PC | MAC | PS4 | XONE</string>
    <string name="placeholder_genre">Action, RPG, Adventure</string>
    <string name="placeholder_name">Game Name</string>
    <string name="placeholder_releaseDate">Jan 11, 2011</string>

    <string name="release">Release</string>

    <string name="toast_favorite_add">Added to Wishlist</string>
    <string name="toast_favorite_del">Removed from Wishlist</string>
    <string name="toast_no_network">No Network Connection</string>
    <string name="toast_no_results">No Games Found</string>
    <string name="toast_first_page">First Page Reached</string>

    <string name="widget_no_favorites">No Favorites Selected Yet!</string>
    <string name="widget_title">Gamedex Wishlist</string>
    <string name="widget_out_in">\u0020out in\u0020</string>
    <string name="widget_unit_days">\u0020days to go</string>
    <string name="widget_out_now">\u0020is RELEASED!</string>
    <string name="widget_release_unknown">\u0020has no release date yet.</string>
    <string name="widget_parenthesis_separator">)\u0020</string>

    <string name="menu_refresh_title">Refresh</string>
    <string name="menu_previous_title">Previous</string>
    <string name="menu_next_title">Next</string>
    <string name="menu_search_title">Search</string>
    <string name="tab_discover_title">Discover</string>
    <string name="tab_search_title">Search</string>
    <string name="tab_wishlist_title">Wishlist</string>
    <string name="list_item_critic_title">Critic</string>
    <string name="list_item_user_title">User</string>
    <string name="tab_discover_title_open_parenthesis">\u0020(</string>
    <string name="tab_discover_title_close_parenthesis">)</string>

    <string name="content_description_tab_discover">Discover Tab</string>
    <string name="content_description_tab_search">Search Tab</string>
    <string name="content_desctiption_tab_wishlist">Wishlist Tab</string>
    <string name="content_description_iv_cover">Cover</string>
    <string name="content_description_iv_calendar">Add to Calendar</string>
    <string name="content_description_iv_favorite">Add and Remove from Wishlist</string>
    <string name="content_description_iv_rating">Rating</string>
    <string name="content_description_search">Search</string>
    <string name="content_description_refresh">Refresh</string>
    <string name="content_description_previous">Previous Page</string>
    <string name="content_description_next">Next Page</string>
    <string name="content_description_ad">Advertisement</string>

</resources>
