<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_primary_light_blueGrey"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary_blueGrey"
        app:tabTextColor="@color/color_primary_light_blueGrey"
        app:tabSelectedTextColor="@color/color_text_icons_white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ti_main_discover"
            android:contentDescription="@string/content_description_tab_discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_discover_title" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ti_main_search"
            android:contentDescription="@string/content_description_tab_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_search_title" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ti_main_wishlist"
            android:contentDescription="@string/content_desctiption_tab_wishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_wishlist_title" />
    </com.google.android.material.tabs.TabLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/av_main"
        android:contentDescription="@string/content_description_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>